--- a/app/res/layout/activity_home.xml
+++ b/app/res/layout/activity_home.xml
@@ -1,22 +1,11 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
-  <ImageView
-      android:id="@+id/background_image"
+  <ListView
+      android:id="@+id/list_view"
       android:layout_width="match_parent"
-      android:layout_height="match_parent"
-      android:scaleType="centerCrop"/>
+      android:layout_height="match_parent"/>
 
-  <TextView
-      android:id="@+id/actual_temp"
-      android:layout_width="match_parent"
-      android:layout_height="wrap_content"
-      android:gravity="center_horizontal"
-      android:textSize="24sp"
-      android:textColor="@color/white"
-      android:text="TESTE"
-      android:paddingTop="48dp"
-      android:paddingBottom="48dp"/>
-
-</FrameLayout>
+</LinearLayout>
