--- a/app/res/values-v21/styles.xml
+++ b/app/res/values-v21/styles.xml
@@ -5,6 +5,11 @@
     <item name="android:colorPrimary">@color/black_gray</item>
     <item name="android:colorPrimaryDark">@color/black</item>
     <item name="android:colorAccent">@color/white</item>
+    <item name="android:background">@color/white</item>
+  </style>
+
+  <style name="AppTheme.Black" parent="AppTheme">
+    <item name="android:background">@color/black</item>
   </style>
 
 </resources>
