--- a/app/res/values/colors.xml
+++ b/app/res/values/colors.xml
@@ -3,4 +3,6 @@
   <color name="white">#FFFFFF</color>
   <color name="black">#000000</color>
   <color name="black_gray">#191919</color>
+  <color name="adapter_title">#444444</color>
+  <color name="adapter_content">#686868</color>
 </resources>
