Chat presenter, interactor and views added. Like button and presenter of details post created

--- a/app/res/layout/activity_chat.xml
+++ b/app/res/layout/activity_chat.xml
@@ -35,6 +35,14 @@
         android:id="@+id/list_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:scrollbars="none"/>
+        android:scrollbars="none"
+        android:visibility="gone"/>
+
+    <TextView
+        android:id="@+id/warning_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:text="@string/loading"
+        android:gravity="center"/>
 
 </LinearLayout>
