--- a/app/res/layout/activity_post_detail.xml
+++ b/app/res/layout/activity_post_detail.xml
@@ -10,4 +10,11 @@
         android:layout_height="match_parent"
         android:layout_gravity="center_vertical"/>
 
+    <ImageButton
+        android:id="@+id/like_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|right"
+        android:src="@mipmap/ic_launcher"/>
+
 </FrameLayout>
